--- a/roles/gluster/tasks/volume/disable-quota.yml
+++ b/roles/gluster/tasks/volume/disable-quota.yml
@@ -1,18 +1,26 @@
 ---
-- name: Remove Gluster Volumns Quota
+#- name: List Gluster Volumns Quota
+#  shell: |
+#    gluster volume quota {{ item.name }} list
+#  register: list_gluster_volumes_quota
+#  ignore_errors: true
+#  with_items: "{{ _volumes }}"
+#- debug: msg={{ list_gluster_volumes_quota }}
+#  ignore_errors: true
+
+
+- name: Remove Gluster Volumns Quota for Root Directory
   shell: |
-    gluster volume quota {{ item.name }} remove {{ item.quota_dir }}
-  register: remove_gluster_volumes_quota
-  ignore_errors: true
+    gluster volume quota {{ item.name }} remove /
+  register: remove_gluster_volumes_root_dir_quota
   with_items: "{{ _volumes }}"
-- debug: msg={{ remove_gluster_volumes_quota }}
+- debug: msg={{ remove_gluster_volumes_root_dir_quota }}
 
 
 - name: Disable Gluster Volumns Quota
   shell: |
     echo y | gluster volume quota {{ item.name }} disable
   register: enable_gluster_volumes_quota
-  ignore_errors: true
   with_items: "{{ _volumes }}"
 - debug: msg={{ enable_gluster_volumes_quota }}
 
@@ -21,16 +29,5 @@
   shell: |
     gluster volume info
   register: display_gluster_volumes_quota_info
-  ignore_errors: true
 - debug: msg={{ display_gluster_volumes_quota_info }}
-
-
-#- name: List Gluster Volumns Quota
-#  shell: |
-#    gluster volume quota {{ item.name }} list
-#  register: list_gluster_volumes_quota
-#  ignore_errors: true
-#  with_items: "{{ _volumes }}"
-#- debug: msg={{ list_gluster_volumes_quota }}
-
 
