--- a/roles/gluster/tasks/client/remove-clients.yml
+++ b/roles/gluster/tasks/client/remove-clients.yml
@@ -1,4 +1,14 @@
 ---
+- name: Delete Directory for Quota
+  file:
+    path: "{{ item.mount_dir }}/{{ item.quota_dir }}"
+    state: absent
+  register: delete_quota_dir
+  with_items: "{{ _volumes }}"
+- debug: msg={{ delete_quota_dir }}
+  when: print_debug == true
+
+
 - name: Delete Text File
   file:
     path: "{{ item.mount_dir }}/{{ item.fn }}"
