--- a/roles/smb/tasks/ext/enable-firewall.yml
+++ b/roles/smb/tasks/ext/enable-firewall.yml
@@ -6,28 +6,28 @@
     enabled: yes
 
 
-- name: Enable Services Permanently
-  firewalld:
-    service: "{{ item.name }}"
-    state: "{{ item.state }}"
-    permanent: true
-    immediate: true
-    offline: true
-  with_items: "{{ _firewall.service }}"
+#- name: Enable Services Permanently
+#  firewalld:
+#    service: "{{ item.name }}"
+#    state: "{{ item.state }}"
+#    permanent: true
+#    immediate: true
+#    offline: true
+#  with_items: "{{ _firewall.service }}"
+
+#
+#- name: Allow Service Ports
+#  firewalld:
+#    permanent: yes
+#    immediate: yes
+#    port: "{{ item.port }}/{{ item.proto }}"
+#    state: "{{ item.state }}"
+#    zone: "{{ item.zone }}"
+#  with_items: "{{ _firewall.port }}"
 
 
-- name: Allow Service Ports
-  firewalld:
-    permanent: yes
-    immediate: yes
-    port: "{{ item.port }}/{{ item.proto }}"
-    state: "{{ item.state }}"
-    zone: "{{ item.zone }}"
-  with_items: "{{ _firewall.port }}"
-
-
-- name: Reload Firewalld
-  command: firewall-cmd --reload
+#- name: Reload Firewalld
+#  command: firewall-cmd --reload
 
 
 #- name: Allow Service Ports If Firewalld is running
